src/main/java/jorge/parser/TraductorParser.java
// Generated from Traductor.g4 by ANTLR 4.7.2
package jorge.parser;
import org.antlr.v4.runtime.atn.*;
import org.antlr.v4.runtime.dfa.DFA;
import org.antlr.v4.runtime.*;
import org.antlr.v4.runtime.misc.*;
import org.antlr.v4.runtime.tree.*;
import java.util.List;
import java.util.Iterator;
import java.util.ArrayList;

@SuppressWarnings({"all", "warnings", "unchecked", "unused", "cast"})
public class TraductorParser extends Parser {
	static { RuntimeMetaData.checkVersion("4.7.2", RuntimeMetaData.VERSION); }

	protected static final DFA[] _decisionToDFA;
	protected static final PredictionContextCache _sharedContextCache =
		new PredictionContextCache();
	public static final int
		T__0=1, T__1=2, T__2=3, T__3=4, T__4=5, T__5=6, T__6=7, T__7=8, T__8=9, 
		FOR=10, AND=11, OR=12, TRUE=13, FALSE=14, MAYORQ=15, MENORQ=16, MENORIGUAL=17, 
		MAYORIGUAL=18, IGUAL=19, DIFERENTE=20, POTENCIA=21, INT=22, FLOAT=23, 
		PQ=24, STRING=25, VOID=26, MAIN=27, PRINT=28, MAS=29, MENOS=30, DIVISION=31, 
		POR=32, ID=33, FLOATS=34, NUM=35, COMMENT=36, COM=37, AS=38;
	public static final int
		RULE_main = 0, RULE_cabeza = 1, RULE_abrir = 2, RULE_cerrar = 3, RULE_cuerpo = 4, 
		RULE_asignar = 5, RULE_impreciones = 6, RULE_imprecion = 7, RULE_declarar = 8, 
		RULE_declararasignar2 = 9, RULE_cond = 10, RULE_condsi = 11, RULE_conelse = 12, 
		RULE_conelseif = 13, RULE_confor = 14, RULE_expr = 15;
	private static String[] makeRuleNames() {
		return new String[] {
			"main", "cabeza", "abrir", "cerrar", "cuerpo", "asignar", "impreciones", 
			"imprecion", "declarar", "declararasignar2", "cond", "condsi", "conelse", 
			"conelseif", "confor", "expr"
		};
	}
	public static final String[] ruleNames = makeRuleNames();

	private static String[] makeLiteralNames() {
		return new String[] {
			null, "'('", "')'", "'{'", "'}'", "'='", "'if'", "'else'", "'++'", "'--'", 
			"'for'", "'&&'", "'||'", "'true'", "'false'", "'>'", "'<'", "'<='", "'>='", 
			"'=='", "'!='", "'^'", "'int'", "'float'", "';'", null, "'void'", "'main'", 
			"'printf'", "'+'", "'-'", "'/'", "'*'"
		};
	}
	private static final String[] _LITERAL_NAMES = makeLiteralNames();
	private static String[] makeSymbolicNames() {
		return new String[] {
			null, null, null, null, null, null, null, null, null, null, "FOR", "AND", 
			"OR", "TRUE", "FALSE", "MAYORQ", "MENORQ", "MENORIGUAL", "MAYORIGUAL", 
			"IGUAL", "DIFERENTE", "POTENCIA", "INT", "FLOAT", "PQ", "STRING", "VOID", 
			"MAIN", "PRINT", "MAS", "MENOS", "DIVISION", "POR", "ID", "FLOATS", "NUM", 
			"COMMENT", "COM", "AS"
		};
	}
	private static final String[] _SYMBOLIC_NAMES = makeSymbolicNames();
	public static final Vocabulary VOCABULARY = new VocabularyImpl(_LITERAL_NAMES, _SYMBOLIC_NAMES);

	/**
	 * @deprecated Use {@link #VOCABULARY} instead.
	 */
	@Deprecated
	public static final String[] tokenNames;
	static {
		tokenNames = new String[_SYMBOLIC_NAMES.length];
		for (int i = 0; i < tokenNames.length; i++) {
			tokenNames[i] = VOCABULARY.getLiteralName(i);
			if (tokenNames[i] == null) {
				tokenNames[i] = VOCABULARY.getSymbolicName(i);
			}

			if (tokenNames[i] == null) {
				tokenNames[i] = "<INVALID>";
			}
		}
	}

	@Override
	@Deprecated
	public String[] getTokenNames() {
		return tokenNames;
	}

	@Override

	public Vocabulary getVocabulary() {
		return VOCABULARY;
	}

	@Override
	public String getGrammarFileName() { return "Traductor.g4"; }

	@Override
	public String[] getRuleNames() { return ruleNames; }

	@Override
	public String getSerializedATN() { return _serializedATN; }

	@Override
	public ATN getATN() { return _ATN; }

	public TraductorParser(TokenStream input) {
		super(input);
		_interp = new ParserATNSimulator(this,_ATN,_decisionToDFA,_sharedContextCache);
	}

	public static class MainContext extends ParserRuleContext {
		public CabezaContext cabeza() {
			return getRuleContext(CabezaContext.class,0);
		}
		public AbrirContext abrir() {
			return getRuleContext(AbrirContext.class,0);
		}
		public CuerpoContext cuerpo() {
			return getRuleContext(CuerpoContext.class,0);
		}
		public CerrarContext cerrar() {
			return getRuleContext(CerrarContext.class,0);
		}
		public TerminalNode EOF() { return getToken(TraductorParser.EOF, 0); }
		public MainContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_main; }
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof TraductorVisitor ) return ((TraductorVisitor<? extends T>)visitor).visitMain(this);
			else return visitor.visitChildren(this);
		}
	}

	public final MainContext main() throws RecognitionException {
		MainContext _localctx = new MainContext(_ctx, getState());
		enterRule(_localctx, 0, RULE_main);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(32);
			cabeza();
			setState(33);
			abrir();
			setState(34);
			cuerpo();
			setState(35);
			cerrar();
			setState(36);
			match(EOF);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class CabezaContext extends ParserRuleContext {
		public TerminalNode VOID() { return getToken(TraductorParser.VOID, 0); }
		public TerminalNode MAIN() { return getToken(TraductorParser.MAIN, 0); }
		public CabezaContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_cabeza; }
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof TraductorVisitor ) return ((TraductorVisitor<? extends T>)visitor).visitCabeza(this);
			else return visitor.visitChildren(this);
		}
	}

	public final CabezaContext cabeza() throws RecognitionException {
		CabezaContext _localctx = new CabezaContext(_ctx, getState());
		enterRule(_localctx, 2, RULE_cabeza);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(38);
			match(VOID);
			setState(39);
			match(MAIN);
			setState(40);
			match(T__0);
			setState(41);
			match(T__1);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class AbrirContext extends ParserRuleContext {
		public AbrirContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_abrir; }
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof TraductorVisitor ) return ((TraductorVisitor<? extends T>)visitor).visitAbrir(this);
			else return visitor.visitChildren(this);
		}
	}

	public final AbrirContext abrir() throws RecognitionException {
		AbrirContext _localctx = new AbrirContext(_ctx, getState());
		enterRule(_localctx, 4, RULE_abrir);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(43);
			match(T__2);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class CerrarContext extends ParserRuleContext {
		public CerrarContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_cerrar; }
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof TraductorVisitor ) return ((TraductorVisitor<? extends T>)visitor).visitCerrar(this);
			else return visitor.visitChildren(this);
		}
	}

	public final CerrarContext cerrar() throws RecognitionException {
		CerrarContext _localctx = new CerrarContext(_ctx, getState());
		enterRule(_localctx, 6, RULE_cerrar);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(45);
			match(T__3);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class CuerpoContext extends ParserRuleContext {
		public List<ExprContext> expr() {
			return getRuleContexts(ExprContext.class);
		}
		public ExprContext expr(int i) {
			return getRuleContext(ExprContext.class,i);
		}
		public List<AsignarContext> asignar() {
			return getRuleContexts(AsignarContext.class);
		}
		public AsignarContext asignar(int i) {
			return getRuleContext(AsignarContext.class,i);
		}
		public List<ImprecionesContext> impreciones() {
			return getRuleContexts(ImprecionesContext.class);
		}
		public ImprecionesContext impreciones(int i) {
			return getRuleContext(ImprecionesContext.class,i);
		}
		public List<DeclararContext> declarar() {
			return getRuleContexts(DeclararContext.class);
		}
		public DeclararContext declarar(int i) {
			return getRuleContext(DeclararContext.class,i);
		}
		public List<Declararasignar2Context> declararasignar2() {
			return getRuleContexts(Declararasignar2Context.class);
		}
		public Declararasignar2Context declararasignar2(int i) {
			return getRuleContext(Declararasignar2Context.class,i);
		}
		public List<CondsiContext> condsi() {
			return getRuleContexts(CondsiContext.class);
		}
		public CondsiContext condsi(int i) {
			return getRuleContext(CondsiContext.class,i);
		}
		public List<ConforContext> confor() {
			return getRuleContexts(ConforContext.class);
		}
		public ConforContext confor(int i) {
			return getRuleContext(ConforContext.class,i);
		}
		public CuerpoContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_cuerpo; }
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof TraductorVisitor ) return ((TraductorVisitor<? extends T>)visitor).visitCuerpo(this);
			else return visitor.visitChildren(this);
		}
	}

	public final CuerpoContext cuerpo() throws RecognitionException {
		CuerpoContext _localctx = new CuerpoContext(_ctx, getState());
		enterRule(_localctx, 8, RULE_cuerpo);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(56);
			_errHandler.sync(this);
			_la = _input.LA(1);
			while ((((_la) & ~0x3f) == 0 && ((1L << _la) & ((1L << T__5) | (1L << FOR) | (1L << INT) | (1L << FLOAT) | (1L << PRINT) | (1L << ID) | (1L << FLOATS) | (1L << NUM))) != 0)) {
				{
				setState(54);
				_errHandler.sync(this);
				switch ( getInterpreter().adaptivePredict(_input,0,_ctx) ) {
				case 1:
					{
					setState(47);
					expr(0);
					}
					break;
				case 2:
					{
					setState(48);
					asignar();
					}
					break;
				case 3:
					{
					setState(49);
					impreciones();
					}
					break;
				case 4:
					{
					setState(50);
					declarar();
					}
					break;
				case 5:
					{
					setState(51);
					declararasignar2();
					}
					break;
				case 6:
					{
					setState(52);
					condsi();
					}
					break;
				case 7:
					{
					setState(53);
					confor();
					}
					break;
				}
				}
				setState(58);
				_errHandler.sync(this);
				_la = _input.LA(1);
			}
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class AsignarContext extends ParserRuleContext {
		public AsignarContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_asignar; }
	 
		public AsignarContext() { }
		public void copyFrom(AsignarContext ctx) {
			super.copyFrom(ctx);
		}
	}
	public static class AsignarrContext extends AsignarContext {
		public TerminalNode ID() { return getToken(TraductorParser.ID, 0); }
		public ExprContext expr() {
			return getRuleContext(ExprContext.class,0);
		}
		public TerminalNode PQ() { return getToken(TraductorParser.PQ, 0); }
		public AsignarrContext(AsignarContext ctx) { copyFrom(ctx); }
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof TraductorVisitor ) return ((TraductorVisitor<? extends T>)visitor).visitAsignarr(this);
			else return visitor.visitChildren(this);
		}
	}

	public final AsignarContext asignar() throws RecognitionException {
		AsignarContext _localctx = new AsignarContext(_ctx, getState());
		enterRule(_localctx, 10, RULE_asignar);
		try {
			_localctx = new AsignarrContext(_localctx);
			enterOuterAlt(_localctx, 1);
			{
			setState(59);
			match(ID);
			setState(60);
			match(T__4);
			setState(61);
			expr(0);
			setState(62);
			match(PQ);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class ImprecionesContext extends ParserRuleContext {
		public ImprecionesContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_impreciones; }
	 
		public ImprecionesContext() { }
		public void copyFrom(ImprecionesContext ctx) {
			super.copyFrom(ctx);
		}
	}
	public static class ImprecionessContext extends ImprecionesContext {
		public TerminalNode PRINT() { return getToken(TraductorParser.PRINT, 0); }
		public ImprecionContext imprecion() {
			return getRuleContext(ImprecionContext.class,0);
		}
		public TerminalNode PQ() { return getToken(TraductorParser.PQ, 0); }
		public ImprecionessContext(ImprecionesContext ctx) { copyFrom(ctx); }
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof TraductorVisitor ) return ((TraductorVisitor<? extends T>)visitor).visitImprecioness(this);
			else return visitor.visitChildren(this);
		}
	}

	public final ImprecionesContext impreciones() throws RecognitionException {
		ImprecionesContext _localctx = new ImprecionesContext(_ctx, getState());
		enterRule(_localctx, 12, RULE_impreciones);
		try {
			_localctx = new ImprecionessContext(_localctx);
			enterOuterAlt(_localctx, 1);
			{
			setState(64);
			match(PRINT);
			setState(65);
			match(T__0);
			setState(66);
			imprecion();
			setState(67);
			match(T__1);
			setState(68);
			match(PQ);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class ImprecionContext extends ParserRuleContext {
		public ImprecionContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_imprecion; }
	 
		public ImprecionContext() { }
		public void copyFrom(ImprecionContext ctx) {
			super.copyFrom(ctx);
		}
	}
	public static class ImprecionnContext extends ImprecionContext {
		public TerminalNode STRING() { return getToken(TraductorParser.STRING, 0); }
		public ImprecionnContext(ImprecionContext ctx) { copyFrom(ctx); }
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof TraductorVisitor ) return ((TraductorVisitor<? extends T>)visitor).visitImprecionn(this);
			else return visitor.visitChildren(this);
		}
	}
	public static class ImprecionexprContext extends ImprecionContext {
		public ExprContext expr() {
			return getRuleContext(ExprContext.class,0);
		}
		public ImprecionexprContext(ImprecionContext ctx) { copyFrom(ctx); }
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof TraductorVisitor ) return ((TraductorVisitor<? extends T>)visitor).visitImprecionexpr(this);
			else return visitor.visitChildren(this);
		}
	}

	public final ImprecionContext imprecion() throws RecognitionException {
		ImprecionContext _localctx = new ImprecionContext(_ctx, getState());
		enterRule(_localctx, 14, RULE_imprecion);
		try {
			setState(72);
			_errHandler.sync(this);
			switch (_input.LA(1)) {
			case STRING:
				_localctx = new ImprecionnContext(_localctx);
				enterOuterAlt(_localctx, 1);
				{
				setState(70);
				match(STRING);
				}
				break;
			case ID:
			case FLOATS:
			case NUM:
				_localctx = new ImprecionexprContext(_localctx);
				enterOuterAlt(_localctx, 2);
				{
				setState(71);
				expr(0);
				}
				break;
			default:
				throw new NoViableAltException(this);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class DeclararContext extends ParserRuleContext {
		public DeclararContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_declarar; }
	 
		public DeclararContext() { }
		public void copyFrom(DeclararContext ctx) {
			super.copyFrom(ctx);
		}
	}
	public static class DeclararrContext extends DeclararContext {
		public TerminalNode INT() { return getToken(TraductorParser.INT, 0); }
		public TerminalNode ID() { return getToken(TraductorParser.ID, 0); }
		public TerminalNode PQ() { return getToken(TraductorParser.PQ, 0); }
		public DeclararrContext(DeclararContext ctx) { copyFrom(ctx); }
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof TraductorVisitor ) return ((TraductorVisitor<? extends T>)visitor).visitDeclararr(this);
			else return visitor.visitChildren(this);
		}
	}
	public static class DeclararfloatsContext extends DeclararContext {
		public TerminalNode FLOAT() { return getToken(TraductorParser.FLOAT, 0); }
		public TerminalNode ID() { return getToken(TraductorParser.ID, 0); }
		public TerminalNode PQ() { return getToken(TraductorParser.PQ, 0); }
		public DeclararfloatsContext(DeclararContext ctx) { copyFrom(ctx); }
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof TraductorVisitor ) return ((TraductorVisitor<? extends T>)visitor).visitDeclararfloats(this);
			else return visitor.visitChildren(this);
		}
	}

	public final DeclararContext declarar() throws RecognitionException {
		DeclararContext _localctx = new DeclararContext(_ctx, getState());
		enterRule(_localctx, 16, RULE_declarar);
		try {
			setState(80);
			_errHandler.sync(this);
			switch (_input.LA(1)) {
			case INT:
				_localctx = new DeclararrContext(_localctx);
				enterOuterAlt(_localctx, 1);
				{
				setState(74);
				match(INT);
				setState(75);
				match(ID);
				setState(76);
				match(PQ);
				}
				break;
			case FLOAT:
				_localctx = new DeclararfloatsContext(_localctx);
				enterOuterAlt(_localctx, 2);
				{
				setState(77);
				match(FLOAT);
				setState(78);
				match(ID);
				setState(79);
				match(PQ);
				}
				break;
			default:
				throw new NoViableAltException(this);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class Declararasignar2Context extends ParserRuleContext {
		public Declararasignar2Context(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_declararasignar2; }
	 
		public Declararasignar2Context() { }
		public void copyFrom(Declararasignar2Context ctx) {
			super.copyFrom(ctx);
		}
	}
	public static class DeclararasignarContext extends Declararasignar2Context {
		public TerminalNode INT() { return getToken(TraductorParser.INT, 0); }
		public TerminalNode ID() { return getToken(TraductorParser.ID, 0); }
		public ExprContext expr() {
			return getRuleContext(ExprContext.class,0);
		}
		public TerminalNode PQ() { return getToken(TraductorParser.PQ, 0); }
		public DeclararasignarContext(Declararasignar2Context ctx) { copyFrom(ctx); }
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof TraductorVisitor ) return ((TraductorVisitor<? extends T>)visitor).visitDeclararasignar(this);
			else return visitor.visitChildren(this);
		}
	}
	public static class DeclararasignarfloatsContext extends Declararasignar2Context {
		public TerminalNode FLOAT() { return getToken(TraductorParser.FLOAT, 0); }
		public TerminalNode ID() { return getToken(TraductorParser.ID, 0); }
		public ExprContext expr() {
			return getRuleContext(ExprContext.class,0);
		}
		public TerminalNode PQ() { return getToken(TraductorParser.PQ, 0); }
		public DeclararasignarfloatsContext(Declararasignar2Context ctx) { copyFrom(ctx); }
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof TraductorVisitor ) return ((TraductorVisitor<? extends T>)visitor).visitDeclararasignarfloats(this);
			else return visitor.visitChildren(this);
		}
	}

	public final Declararasignar2Context declararasignar2() throws RecognitionException {
		Declararasignar2Context _localctx = new Declararasignar2Context(_ctx, getState());
		enterRule(_localctx, 18, RULE_declararasignar2);
		try {
			setState(94);
			_errHandler.sync(this);
			switch (_input.LA(1)) {
			case INT:
				_localctx = new DeclararasignarContext(_localctx);
				enterOuterAlt(_localctx, 1);
				{
				setState(82);
				match(INT);
				setState(83);
				match(ID);
				setState(84);
				match(T__4);
				setState(85);
				expr(0);
				setState(86);
				match(PQ);
				}
				break;
			case FLOAT:
				_localctx = new DeclararasignarfloatsContext(_localctx);
				enterOuterAlt(_localctx, 2);
				{
				setState(88);
				match(FLOAT);
				setState(89);
				match(ID);
				setState(90);
				match(T__4);
				setState(91);
				expr(0);
				setState(92);
				match(PQ);
				}
				break;
			default:
				throw new NoViableAltException(this);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class CondContext extends ParserRuleContext {
		public CondContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_cond; }
	 
		public CondContext() { }
		public void copyFrom(CondContext ctx) {
			super.copyFrom(ctx);
		}
	}
	public static class OranContext extends CondContext {
		public Token op;
		public List<CondContext> cond() {
			return getRuleContexts(CondContext.class);
		}
		public CondContext cond(int i) {
			return getRuleContext(CondContext.class,i);
		}
		public TerminalNode OR() { return getToken(TraductorParser.OR, 0); }
		public TerminalNode AND() { return getToken(TraductorParser.AND, 0); }
		public OranContext(CondContext ctx) { copyFrom(ctx); }
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof TraductorVisitor ) return ((TraductorVisitor<? extends T>)visitor).visitOran(this);
			else return visitor.visitChildren(this);
		}
	}
	public static class ContrueContext extends CondContext {
		public TerminalNode TRUE() { return getToken(TraductorParser.TRUE, 0); }
		public ContrueContext(CondContext ctx) { copyFrom(ctx); }
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof TraductorVisitor ) return ((TraductorVisitor<? extends T>)visitor).visitContrue(this);
			else return visitor.visitChildren(this);
		}
	}
	public static class ConfalseContext extends CondContext {
		public TerminalNode FALSE() { return getToken(TraductorParser.FALSE, 0); }
		public ConfalseContext(CondContext ctx) { copyFrom(ctx); }
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof TraductorVisitor ) return ((TraductorVisitor<? extends T>)visitor).visitConfalse(this);
			else return visitor.visitChildren(this);
		}
	}
	public static class ParconContext extends CondContext {
		public CondContext cond() {
			return getRuleContext(CondContext.class,0);
		}
		public ParconContext(CondContext ctx) { copyFrom(ctx); }
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof TraductorVisitor ) return ((TraductorVisitor<? extends T>)visitor).visitParcon(this);
			else return visitor.visitChildren(this);
		}
	}
	public static class ConditioContext extends CondContext {
		public Token op;
		public List<ExprContext> expr() {
			return getRuleContexts(ExprContext.class);
		}
		public ExprContext expr(int i) {
			return getRuleContext(ExprContext.class,i);
		}
		public TerminalNode MAYORQ() { return getToken(TraductorParser.MAYORQ, 0); }
		public TerminalNode MENORQ() { return getToken(TraductorParser.MENORQ, 0); }
		public TerminalNode MENORIGUAL() { return getToken(TraductorParser.MENORIGUAL, 0); }
		public TerminalNode MAYORIGUAL() { return getToken(TraductorParser.MAYORIGUAL, 0); }
		public TerminalNode IGUAL() { return getToken(TraductorParser.IGUAL, 0); }
		public TerminalNode DIFERENTE() { return getToken(TraductorParser.DIFERENTE, 0); }
		public ConditioContext(CondContext ctx) { copyFrom(ctx); }
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof TraductorVisitor ) return ((TraductorVisitor<? extends T>)visitor).visitConditio(this);
			else return visitor.visitChildren(this);
		}
	}

	public final CondContext cond() throws RecognitionException {
		return cond(0);
	}

	private CondContext cond(int _p) throws RecognitionException {
		ParserRuleContext _parentctx = _ctx;
		int _parentState = getState();
		CondContext _localctx = new CondContext(_ctx, _parentState);
		CondContext _prevctx = _localctx;
		int _startState = 20;
		enterRecursionRule(_localctx, 20, RULE_cond, _p);
		int _la;
		try {
			int _alt;
			enterOuterAlt(_localctx, 1);
			{
			setState(107);
			_errHandler.sync(this);
			switch (_input.LA(1)) {
			case ID:
			case FLOATS:
			case NUM:
				{
				_localctx = new ConditioContext(_localctx);
				_ctx = _localctx;
				_prevctx = _localctx;

				setState(97);
				expr(0);
				setState(98);
				((ConditioContext)_localctx).op = _input.LT(1);
				_la = _input.LA(1);
				if ( !((((_la) & ~0x3f) == 0 && ((1L << _la) & ((1L << MAYORQ) | (1L << MENORQ) | (1L << MENORIGUAL) | (1L << MAYORIGUAL) | (1L << IGUAL) | (1L << DIFERENTE))) != 0)) ) {
					((ConditioContext)_localctx).op = (Token)_errHandler.recoverInline(this);
				}
				else {
					if ( _input.LA(1)==Token.EOF ) matchedEOF = true;
					_errHandler.reportMatch(this);
					consume();
				}
				setState(99);
				expr(0);
				}
				break;
			case TRUE:
				{
				_localctx = new ContrueContext(_localctx);
				_ctx = _localctx;
				_prevctx = _localctx;
				setState(101);
				match(TRUE);
				}
				break;
			case FALSE:
				{
				_localctx = new ConfalseContext(_localctx);
				_ctx = _localctx;
				_prevctx = _localctx;
				setState(102);
				match(FALSE);
				}
				break;
			case T__0:
				{
				_localctx = new ParconContext(_localctx);
				_ctx = _localctx;
				_prevctx = _localctx;
				setState(103);
				match(T__0);
				setState(104);
				cond(0);
				setState(105);
				match(T__1);
				}
				break;
			default:
				throw new NoViableAltException(this);
			}
			_ctx.stop = _input.LT(-1);
			setState(114);
			_errHandler.sync(this);
			_alt = getInterpreter().adaptivePredict(_input,6,_ctx);
			while ( _alt!=2 && _alt!=org.antlr.v4.runtime.atn.ATN.INVALID_ALT_NUMBER ) {
				if ( _alt==1 ) {
					if ( _parseListeners!=null ) triggerExitRuleEvent();
					_prevctx = _localctx;
					{
					{
					_localctx = new OranContext(new CondContext(_parentctx, _parentState));
					pushNewRecursionContext(_localctx, _startState, RULE_cond);
					setState(109);
					if (!(precpred(_ctx, 5))) throw new FailedPredicateException(this, "precpred(_ctx, 5)");
					setState(110);
					((OranContext)_localctx).op = _input.LT(1);
					_la = _input.LA(1);
					if ( !(_la==AND || _la==OR) ) {
						((OranContext)_localctx).op = (Token)_errHandler.recoverInline(this);
					}
					else {
						if ( _input.LA(1)==Token.EOF ) matchedEOF = true;
						_errHandler.reportMatch(this);
						consume();
					}
					setState(111);
					cond(6);
					}
					} 
				}
				setState(116);
				_errHandler.sync(this);
				_alt = getInterpreter().adaptivePredict(_input,6,_ctx);
			}
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			unrollRecursionContexts(_parentctx);
		}
		return _localctx;
	}
